# starling-bank

./: .pre-commit-config.yaml  Bank-Starling-API-AccountHolder.html  Bank-Starling-API-Accounts.html  Bank-Starling-API-Addresses.html  Bank-Starling-API-Core.html  Bank-Starling-API-DirectDebit.html  Bank-Starling-API-Payees.html  Bank-Starling-API-Payments.html  Bank-Starling-API-Schemas.html  Bank-Starling-API-SpendingInsights.html  Bank-Starling-API-UserIdentities.html  CHANGELOG.md  CNAME  README.md  cabal.project  doc-index-36.html  doc-index-60.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  (+8 more)
.github/workflows/: haskell.yml
src/Bank/: Starling.hs
src/Bank/Starling/API/: AccountHolder.hs  Accounts.hs  Addresses.hs  Core.hs  DirectDebit.hs  Payees.hs  Payments.hs  Schemas.hs  SpendingInsights.hs  UserIdentities.hs
